--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <h2 class="mb-4">Solar Lamps in Google Map</h2>
                 </div>
                 <div class="container-fluid p-0">
-                    <iframe src="https://www.google.com/maps/d/embed?mid=1QcY2K38y2VmNW1BwMZlEAXoBI4C7bh0&ehbc=2E312F" width="100%" height="480"></iframe>
+                    <iframe src="https://www.google.com/maps/d/embed?mid=1QcY2K38y2VmNW1BwMZlEAXoBI4C7bh0&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
                 </div>
             </div>
         </section>
