--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
             <div class="container-fluid p-0">
                 <iframe
                     src="https://www.google.com/maps/d/embed?mid=1QcY2K38y2VmNW1BwMZlEAXoBI4C7bh0&ehbc=2E312F&noprof=1"
-                    width="640" height="480"></iframe>
+                    width="100%" height="480">
+                </iframe>
             </div>
         </div>
     </section>
