--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <hr class="divider divider-light" />
                     <p class="text-white-75 mb-4">We are a group of friends, neighbors, native, volunteers and admirers
                         of Cap-Haitien. It started with a group of friends, Richard, Philobert, Chil, Hugues and
-                        Meleckwere who were conversing, lamenting and brainstorming about Haiti when the idea came up to
+                        Meleck were conversing, lamenting and brainstorming about Haiti when the idea came up to
                         start working on some type of projects that will impact or enhanced the lives of the people in
                         their old neighborhood and expanding to the entire City.</p>
                     <a class="btn btn-light btn-xl" href="#projects">Solar Street Lamps</a>
@@ -172,7 +172,7 @@
                 <div class="col-lg-8 col-xl-6 text-center">
                     <h2 class="mt-0">Let's Get In Touch!</h2>
                     <hr class="divider" />
-                    <p class="text-muted mb-5">Send us a messages and we will get back to you as soon as possible!
+                    <p class="text-muted mb-5">If you would like to learn more the projects you can reach out via email and we will get back to you as soon as possible!
                        <br/> <a href="mailto:okapprojects@gmail.com">OkapProjects@gmail.com</a>
                     </p>
                 </div>
