Update Facebook Link

--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
                        <br/> <a href="mailto:okapprojects@gmail.com">OkapProjects@gmail.com</a>
                     </p>
                 </div>
-                https://www.facebook.com/profile.php?id=61555225190074
+                <a href="https://www.facebook.com/profile.php?id=61555225190074">
+                    <img src="Bootstrap-Bootstrap-Bootstrap-facebook.512.png" alt="Facebook" />
+                </a>
             </div>
         </div>
     </section>
