--- a/index.html
+++ b/index.html
@@ -174,10 +174,12 @@
                     <hr class="divider" />
                     <p class="text-muted mb-5">If you would like to learn more about the projects you can reach out via email and we will get back to you as soon as possible!
                        <br/> <a href="mailto:okapprojects@gmail.com">OkapProjects@gmail.com</a>
-                       <br/><a href="https://www.facebook.com/profile.php?id=61555225190074">
-                    <img src="Bootstrap-Bootstrap-Bootstrap-facebook.30.png" alt="Facebook" />
-                </a>
-                    </p>
+                       <br/>
+                       <br/>
+                        <a href="https://www.facebook.com/profile.php?id=61555225190074">
+                        <img src="Bootstrap-Bootstrap-Bootstrap-facebook.30.png" alt="Facebook" />
+                       </a>
+                     </p>
                 </div>
             </div>
         </div>
