--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Solar Project</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#donate">Donate</a></li>
                     <li class="nav-item"><a class="nav-link" href="#solar_lamps">Map</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
@@ -56,6 +57,8 @@
                         South, Laferrière Citadel is a hilltop fortress built by revolutionary leader Henri Christophe.
                         The ruins of his 1813 Sans-Souci Palace are in the nearby town of Milot.</p>
                     <a class="btn btn-primary btn-xl" href="#about">Okap Strong</a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="btn btn-primary btn-xl" href="#donate">Donate</a>
                 </div>
             </div>
         </div>
@@ -444,6 +447,23 @@
             </div>
         </div>
     </section>
+
+    <!-- donate-->
+    <section class="page-section" id="donate">
+        <div class="container-fluid p-4">
+            <h2 class="text-center mt-0">Please Donate!</h2>
+            <hr class="divider" />
+            <p class="text-muted mb-0"> OkapProjects remain steadfast in our mission to improve the lives of
+                the people of Cap-haitien and wer are committed to making a meaningful difference.
+            We would like to express our heartfelt gratitude to everyone who has contributed
+        to Okap Projects.</p>
+        <p><hr/></p>
+        <a class="btn btn-primary btn-xl text-center" href="https://www.zeffy.com/donation-form/okap-strong-step-forward-take-action-help-us-install-solar-power-lights-all-over-this-great-city">Click to Donate</a>
+        </div>
+
+
+    </section>
+    
 
     <!-- Contact-->
     <section class="page-section" id="contact">
