Add donation section

--- a/index.html
+++ b/index.html
@@ -454,14 +454,12 @@
             <h2 class="text-center mt-0">Please Donate!</h2>
             <hr class="divider" />
             <p class="text-muted mb-0"> OkapProjects remain steadfast in our mission to improve the lives of
-                the people of Cap-haitien and wer are committed to making a meaningful difference.
-            We would like to express our heartfelt gratitude to everyone who has contributed
+                the people of Cap-haitien and we are committed to making a meaningful difference.
+            We would like to express our heartfelt gratitude to everyone who has and plan contributed
         to Okap Projects.</p>
         <p><hr/></p>
         <a class="btn btn-primary btn-xl text-center" href="https://www.zeffy.com/donation-form/okap-strong-step-forward-take-action-help-us-install-solar-power-lights-all-over-this-great-city">Click to Donate</a>
         </div>
-
-
     </section>
     
 
