Update Donation section

--- a/index.html
+++ b/index.html
@@ -448,20 +448,23 @@
         </div>
     </section>
 
-    <!-- donate-->
-    <section class="page-section" id="donate">
-        <div class="container-fluid p-4">
-            <h2 class="text-center mt-0">Please Donate!</h2>
-            <hr class="divider" />
-            <p class="text-muted mb-0"> OkapProjects remain steadfast in our mission to improve the lives of
-                the people of Cap-haitien and we are committed to making a meaningful difference.
-            We would like to express our heartfelt gratitude to everyone who has and plan contributed
-        to Okap Projects.</p>
-        <p><hr/></p>
-        <a class="btn btn-primary btn-xl text-center" href="https://www.zeffy.com/donation-form/okap-strong-step-forward-take-action-help-us-install-solar-power-lights-all-over-this-great-city">Click to Donate</a>
+
+    <!-- Donate-->
+    <section class="page-section bg-primary" id="donate">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <h2 class="text-white mt-0">We need your help!</h2>
+                    <hr class="divider divider-light" />
+                    <p class="text-white-75 mb-4">OkapProjects remain steadfast in our mission to improve the lives of
+                        the people of Cap-haitien and we are committed to making a meaningful difference.
+                    We would like to express our heartfelt gratitude to everyone who has and plan contributed
+                to Okap Projects.</p></p>
+                    <a class="btn btn-light btn-xl" href="https://www.zeffy.com/donation-form/okap-strong-step-forward-take-action-help-us-install-solar-power-lights-all-over-this-great-city">Click to Donate</a>
+                </div>
+            </div>
         </div>
-    </section>
-    
+    </section>    
 
     <!-- Contact-->
     <section class="page-section" id="contact">
