--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                         the people of Cap-haitien and we are committed to making a meaningful difference.
                     We would like to express our heartfelt gratitude to everyone who has and plan contributed
                 to Okap Projects.</p></p>
-                    <a class="btn btn-light btn-xl" href="https://www.zeffy.com/donation-form/okap-strong-step-forward-take-action-help-us-install-solar-power-lights-all-over-this-great-city">Click to Donate</a>
+                    <a class="btn btn-light btn-xl" href="https://www.zeffy.com/donation-form/okap-strong-step-forward-take-action-help-us-install-solar-power-lights-all-over-this-great-city" target="_blank">Click to Donate</a>
                 </div>
             </div>
         </div>
