--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <script src="https://zeffy-scripts.s3.ca-central-1.amazonaws.com/embed-form-script.min.js"></script>
 </head>
 
 <body id="page-top">
@@ -460,7 +462,7 @@
                         the people of Cap-haitien and we are committed to making a meaningful difference.
                     We would like to express our heartfelt gratitude to everyone who has and plan contributed
                 to Okap Projects.</p></p>
-                    <a class="btn btn-light btn-xl" href="https://www.zeffy.com/donation-form/okap-strong-step-forward-take-action-help-us-install-solar-power-lights-all-over-this-great-city" target="_blank">Click to Donate</a>
+                    <a class="btn btn-light btn-xl" zeffy-form-link="https://www.zeffy.com/embed/donation-form/okap-strong-step-forward-take-action-help-us-install-solar-power-lights-all-over-this-great-city?modal=true">Click to Donate</a>
                 </div>
             </div>
         </div>
