Add phone number

--- a/index.html
+++ b/index.html
@@ -478,6 +478,10 @@
                     <p class="text-muted mb-5">If you would like to learn more about the projects you can reach out via email and we will get back to you as soon as possible!
                        <br/> <a href="mailto:okapprojects@gmail.com">OkapProjects@gmail.com</a>
                        <br/>
+                       <a href="tel:+1770-765-2393">770-765-2393</a>
+                       
+                       <br/>
+
                        <br/>
                         <a href="https://www.facebook.com/profile.php?id=61555225190074">
                         <img src="Bootstrap-Bootstrap-Bootstrap-facebook.30.png" alt="Facebook" />
